--- a/.github/workflows/ci-release-package.yml
+++ b/.github/workflows/ci-release-package.yml
@@ -43,10 +43,6 @@ jobs:
             #   with:
             #       token: ${{ secrets.NPM_TOKEN }}
 
-            - name: Read package.json
-              uses: dutscher/read-package-json-endpoint-actions@v1.33.7
-              id: package-json-endpoint
-
             - name: Create Git Release
               if: steps.publish.outputs.type != 'none'
               id: create_release
@@ -54,8 +50,8 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  tag_name: ${{ steps.package-json-endpoint.outputs.endpoint }}
-                  release_name: Release ${{ steps.package-json-endpoint.outputs.endpoint }}
-                  body: ${{ steps.package-json-endpoint.outputs.endpoint }}
+                  tag_name: 3.0.0
+                  release_name: Release 3.0.0
+                  body: 3.0.0
                   draft: false
                   prerelease: false
