--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint-plugin-prettier": "4.0.0",
 		"microbundle": "0.14.2",
 		"prettier": "2.5.1",
+		"tsup": "^8.5.0",
 		"typedoc": "0.22.14",
 		"typescript": "4.6.2"
 	},
